--- a/section.twig
+++ b/section.twig
@@ -172,12 +172,14 @@
             </div>
         </div>
     </div>
+
+
     {% set theKeywords = '' %}
-    {% if article.keywords is defined and article.keywords != '' %}
-        {% set theKeywords = article.keywords %}
-    {% elseif blogInfo.keywords is defined and blogInfo.keywords != '' %}
-        {% set theKeywords = blogInfo.keywords %}
+    {% if blogData.keywords is defined and blogData.keywords != '' %}
+        {% set theKeywords = blogData.keywords %}
     {% endif %}
+
+
     <div class="ad-keywords" data-keywords="{{theKeywords}}"></div>
 </main>
 
