change class to id for ad keywords

--- a/section.twig
+++ b/section.twig
@@ -180,7 +180,7 @@
     {% endif %}
 
 
-    <div class="ad-keywords" data-keywords="{{theKeywords}}"></div>
+    <div id ="ad-keywords" data-keywords="{{theKeywords}}"></div>
 </main>
 
 <script>
