--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -5,7 +5,13 @@
     {% set imageSize = "Width: " ~ params.imgWidth ~ " Height: " ~ params.imgHeight %}
 {% endif %}
 
-{% set config = _Network.getThemeConfig() %}
+{% set config = this.params.config %}
+{% set label = true %}
+{% set additionalLabel = false %}
+{% if config.cardOptions is defined %}
+    {% set label = config.cardOptions.label is defined ? config.cardOptions.label : label %}
+    {% set additionalLabel = config.cardOptions['additional-label'] is defined ? config.cardOptions['additional-label'] : additionalLabel %}
+{% endif %}
 
 {% if params.hasMedia %}
     <figure class="{{params.cardType}}c-cards-view__media {{params.videoClass}}" title="{{imageSize}}">
@@ -33,10 +39,10 @@
 <div class="{{params.cardType}}c-cards-view__container">
     <div class="c-cards-view__container-topSection">
         <div class="c-cards-view__category-wrap">
-            {% if params.category != params.blogTitle and config['additional-label'] == true %}
+            {% if params.category != params.blogTitle and additionalLabel == true %}
                 <div class="c-cards-view__additional-category">{{params.category}}</div>
             {% endif %}
-            {% if config['card-label'] == true %}
+            {% if label == true %}
                 <div class="{{params.cardType}}c-cards-view__category">{{params.blogTitle}}</div>
             {% endif %}
         </div>        
