--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -174,6 +174,13 @@
 
     {% set videoClass = article.featuredMedia['type'] == 'video' ? 'c-cards-view__media--video' : '' %}
     {% set videoClass = forceVideo ? 'c-cards-view__media--video' : videoClass %}
+    
+    
+    {% set blogguid = article.primaryBlog is defined ? article.primaryBlog.guid : article.blog.guid %}
+    {% set blogTitle = article.primaryBlog is defined ? article.primaryBlog.title : article.blog.title %}
+
+
+
 
     {% set params = {
         imageSuppress   : imageSuppress,
@@ -189,8 +196,8 @@
         videoClass      : videoClass,
         profileImg      : profileImg,
         hasMedia        : (displayMedia) ? 'True' : 'False',
-        blogguid        : article.blog.guid,
-        blogTitle       : article.blog.title,
+        blogguid        : blogguid,
+        blogTitle       : blogTitle,
         category        : article.label,
         cardType        : cardType, 
         lazyload        : lazyload,
@@ -206,7 +213,6 @@
         target          : (newWindow) ? "_blank" : "_self",
         additionalInfo  : article.additionalInfo
     } %}
-    
     {% set totalstring = "" %}
     {% set totals = (article.total is defined) ? article.total : false %}
     {% if totals and _User.isAdminUser() %}
