--- a/partials/panels/section-06.twig
+++ b/partials/panels/section-06.twig
@@ -5,12 +5,11 @@
     limit: 6, 
     sortBy: 'VIEWS', 
     scope: 'network',
-    interval: 168 
+    interval: 168,
+    includePrimaryBlog: true
+}) %}
 
-     }) %}
-
-
-<div class="row">
+<div class="row" data-section="06">
     <div class="col-12">
         <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
@@ -51,11 +50,11 @@
 
                 <div class="col-12 col-lg-3 left-border">
                     {{this.render('../_single-article.twig', {
-                    article: articles[articleCount],
-                    position: (articleCount+1),
-                    imageSize: {width: 79, height: 96},
-                    containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-                    timeSuppress: timeSuppress
+                        article: articles[articleCount],
+                        position: (articleCount+1),
+                        imageSize: {width: 79, height: 96},
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                 </div>
@@ -68,11 +67,11 @@
 
                 <div class="col-12 col-lg-3 left-border">
                     {{this.render('../_single-article.twig', {
-                    article: articles[articleCount],
-                    position: (articleCount+1),
-                    imageSize: {width: 79, height: 96},
-                    containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-                    timeSuppress: timeSuppress
+                        article: articles[articleCount],
+                        position: (articleCount+1),
+                        imageSize: {width: 79, height: 96},
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                 </div>
