--- a/layout-gallery.twig
+++ b/layout-gallery.twig
@@ -15,7 +15,7 @@
 
 
 
-{% set popularArticles = _Article.getPopularArticles({ limit: 10, sortBy: 'VIEWS', scope: 'blog' }) %}
+{# {% set popularArticles = _Article.getPopularArticles({ limit: 10, sortBy: 'VIEWS', scope: 'blog' }) %} #}
 
 
 <!-- used to index each article as we loop over throughout the template -->
