--- a/partials/panels/section-06.twig
+++ b/partials/panels/section-06.twig
@@ -1,13 +1,23 @@
 {% set articleCount = 0 %}
 {% set cardIndex = 0 %}
 
-{% set popularArticles = _Article.getPopularArticles({ 
-    limit: 6, 
-    sortBy: 'VIEWS', 
-    scope: 'network',
-    interval: 168,
-    includePrimaryBlog: true
-}) %}
+
+
+{% set cacheKey = "articlePopular_section6" %}
+{% set popular = getCache(cacheKey) %}
+{% if (popular is empty) %}
+    {% set popular = _Article.getPopularArticles({ 
+        limit: 6, 
+        sortBy: 'VIEWS', 
+        scope: 'network',
+        interval: 168,
+        includePrimaryBlog: true
+    }) %}
+    {% set cache = setCache(cacheKey, popular, 500) %} 
+{% endif %} 
+
+
+
 
 <div class="row" data-section="06">
     <div class="col-12">
@@ -20,10 +30,10 @@
 
 <div class="c-cards-container c-cards-container-xs u-margin-bottom-50">
     <div class="row">
-        {% for i in 0..5 if popularArticles[i] %}
+        {% for i in 0..5 if popular[i] %}
                 <li class="col-12 col-lg-2 left-border">
                     {{this.render('../_single-article.twig', {
-                        article: popularArticles[i], 
+                        article: popular[i], 
                         imageSuppress: true,
                         containerClass: "card-6-mobile card-6-tablet card-6-desktop"
                     }) | raw}}
