--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -62,7 +62,13 @@
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-flex d-sm-none">
                             <a id="signinBtn" href="javascript:;" class="c-navigation__item">Log in</a>
                             <a href="{{networkData.defaultBlogUrl}}/subscriptions"
-                                class="c-navigation__item c-navigation__item--borderred subscribe">Subscribe</a>
+                                class="c-navigation__item c-navigation__item--borderred subscribe">
+                                {% if config['subscribe-label'] is defined and config['subscribe-label'] is not empty %} 
+                                    {{config['subscribe-label']}} 
+                                {% else %} 
+                                    Subscribe 
+                                {% endif %}     
+                            </a>
                         </div>
                         {% endif %}
                         {% endif %}
@@ -106,11 +112,17 @@
                             <a href="{{_AppHelper.getLogoffUrl()}}"
                                 class="c-navigation__item c-navigation__item--borderred">Log out</a>
                         </div>
-                        {% else %}
+                       {% else %}
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-none d-sm-flex">
                             <a id="signinBtn" href="javascript:;" class="c-navigation__item">Log in</a>
                             <a href="{{networkData.defaultBlogUrl}}/subscriptions#subscriptions"
-                                class="c-navigation__item c-navigation__item--borderred subscribe">Subscribe</a>
+                                class="c-navigation__item c-navigation__item--borderred subscribe">
+                                {% if config['subscribe-label'] is defined and config['subscribe-label'] is not empty %} 
+                                    {{config['subscribe-label']}} 
+                                {% else %} 
+                                    Subscribe 
+                                {% endif %} 
+                            </a>
                         </div>
                         {% endif %}
                         {% endif %}
@@ -145,7 +157,13 @@
 
 <div class="c-sidebarMenu">
     <a href="/subscriptions" class="c-sidebarMenu__subscribe">
-        <span>Subscribe today</span>
+        <span>
+        {% if config['subscribe-label'] is defined and config['subscribe-label'] is not empty %} 
+            {{config['subscribe-label']}} 
+        {% else %} 
+            Subscribe 
+        {% endif %} 
+         today</span>
         {#<span>
             <img src={{networkData.templatePath}}/static/icons/icons-navigation-arrow.svg />
         </span>#}
