--- a/partials/gallery.twig
+++ b/partials/gallery.twig
@@ -3,7 +3,7 @@
 {% set owl = '' %}
 {% set owlClass = '' %}
 
-{% set imgWidth = imageSize.width is defined ? imageSize.width : 745 %}
+{% set imgWidth = imageSize.width is defined ? imageSize.width : 'auto' %}
 {% set imgHeight = imageSize.height is defined ? imageSize.height : 497 %}
 {% set gravity = 'faces' %}
 {% set mobImgHeight = imageSize.height is defined ? imageSize.height : 250 %}
