--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -112,10 +112,8 @@
                         {% if paywall %}
                         {% if loggedin %}
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs d-none d-sm-flex">
-                            <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My
-                                account</a>
-                            <a href="{{_AppHelper.getLogoffUrl()}}"
-                                class="c-navigation__item c-navigation__item--borderred">Log out</a>
+                            <a class="c-navigation__item" href="{{networkData.defaultBlogUrl}}/user/edit-profile">My account</a>
+                            <a href="{{_AppHelper.getLogoffUrl()}}" class="c-navigation__item c-navigation__item--borderred">Log out</a>
                         </div>
                        {% else %}
                         <div class="c-navigation-4 c-navigation-4--inverse c-navigation-4-xs  d-none d-sm-flex">
