--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -317,12 +317,12 @@
 
                                                             <div class="form-group" style="margin-top:30px;">
                                                                 <button type="submit" id="subscribe"
-                                                                    class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
+                                                                    class="c-button c-button-block c-button--lightBlue c-button--radius">{{subscribeLabel}} now</button>
                                                             </div>
                                                     {% else %}
                                                             <div class="form-group" style="margin-top:30px;">
                                                                 <div id="card-errors" class="errorText" role="alert"></div>
-                                                                <button type="submit" id="subscribe" class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
+                                                                <button type="submit" id="subscribe" class="c-button c-button-block c-button--lightBlue c-button--radius">{{subscribeLabel}} now</button>
                                                             </div>
                                                     {% endif %}
                                                 {% endif %}
